<resources>
    <string name="app_name">Mine3D</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="settings_title">Impostazioni</string>
    <string name="settings_name">Nome</string>
    <string name="settings_name_default">User</string>
    <string name="settings_theme_dark">Tema Scuro</string>
    <string name="settings_theme_light">Tema Chiaro</string>
    <string name="settings_timer">Mostra il timer</string>
    <string name="settings_bomb">Mostra le bombe rimanenti</string>
    <string name="settings_Music_title">Livello musica</string>
    <string name="settings_Effect_title">Livello effetti</string>
    <string name="settings_Vibbrazione">Vibbrazione GameOver</string>
    <string name="settings_Controll">Controlli</string>
    <string name="checkedMark">\u2713</string>

    //controlli
    <string name="settings_contro_title">Impostazione cotrolli</string>
    <string name="settings_Controll_Default_Normal">Default</string>
    <string name="settings_Controll_Default_Inverted">Invertito</string>
    <string name="settings_contro_preset">Preset</string>
    <string name="settings_Controll_selecter_sx"><![CDATA[<]]></string>
    <string name="settings_Controll_selecter_dx"><![CDATA[>]]></string>
    <string name="settings_contro_selecter_reveal_deafult">Hold</string>
    <string name="settings_contro_selecter_flag_deafult">Tap</string>
    <string name="settings_control_sensivity_title">Sensività</string>
    <string name="settings_control_hold_title">Hold Time</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Opzioni</string>
    <string name="menu_game_base">Standard</string>
    <string name="settings_contro_reveal_title">Rivela</string>
    <string name="settings_contro_flag_title">Metti bandiera</string>
    <string name="build_game_sett_title">Custom Game</string>
    <string name="build_game_settings_size_text">Lato cubo:</string>
    <string name="build_game_settings_n_defualt">Numero bombe su celle:</string>
    <string name="build_game_settings_difficulty_easy">EASY</string>
    <string name="build_game_settings_difficulty_medium">MEDIUM</string>
    <string name="build_game_settings_difficulty_hard">HARD</string>
    <string name="build_game_settings_next_text">Incrementare alla vittoria</string>
    <string name="build_game_settings_next_text_input">Incremento:</string>
    <string name="build_game_settings_start">Start Game</string>
    <string name="fragment_end_go_to_menu">Vai al menu</string>
    <string name="fragment_end_go_to_build">CREA UN NUOVO GAME</string>
    <string name="fragment_end_go_next">Next</string>
    <string name="fragment_pause_text">Pausa</string>
    <string name="fragment_pause_go_to_game">Torna alla partita</string>
    <string name="fragment_end_default_text">GameOver</string>
    <string name="fragment_game_timer_default">00:00</string>
    <string name="fragment_game_bomb_default">0</string>
    <string name="menu_game_custom">Custom</string>
    <string name="menu_game_reasum">Riprendi</string>
    <string name="standard_5_easy">5-Easy</string>
    <string name="standard_5_medium">5-medium</string>
    <string name="standard_5_hard">5-hard</string>
    <string name="standard_7_hard">7-Hard</string>
    <string name="standard_7_medium">7-Medium</string>
    <string name="standard_7_easy">7-Easy</string>
    <string name="win">Vittoria!!!</string>
    <string name="gameover">GameOver!!!</string>
    <string name="build_game_sett_bomb">%1$d/%2$d</string>
    <string name="build_game_sett_bombBar">%1$d%%</string>

</resources>