<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/build_game_settings_frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <TextView
            android:id="@+id/build_game_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_game_sett_title"
            android:textSize="25sp"
            />

        <LinearLayout
            android:id="@+id/build_game_settings_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/build_game_settings_size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_game_settings_size_text"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/build_game_settings_size_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="5"
                android:minHeight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/build_game_settings_framm_bombe_su_celle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/build_game_settings_bombe_su_celle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_game_settings_n_defualt"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/build_game_settings_bombe_su_celle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/0"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/build_game_settings_framm_bombe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <SeekBar
                android:id="@+id/build_game_settings_bombe_bar"
                android:layout_width="266dp"
                android:layout_height="40dp"
                android:indeterminate="false"
                android:max="80"
                android:min="10"
                android:progress="1"
                />

            <TextView
                android:id="@+id/build_game_settings_bomb_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10%"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/build_game_settings_framm_default_difficulty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/build_game_settings_difficulty_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_game_settings_difficulty_easy"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/build_game_settings_difficulty_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_game_settings_difficulty_medium"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/build_game_settings_difficulty_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_game_settings_difficulty_hard"
                android:textSize="25sp"
                />
        </LinearLayout>

        <CheckBox
            android:id="@+id/build_game_settings_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_game_settings_next_text"
            />

        <LinearLayout
            android:id="@+id/build_game_settings_next_framm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/build_game_settings_next_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_game_settings_next_text_input"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/build_game_settings_next_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/build_game_settings_next_input_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="1"
                android:minHeight="20dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/build_game_settings_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_game_settings_start"
            android:textSize="25sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>